--- a/apps/polyphemus/Dockerfile
+++ b/apps/polyphemus/Dockerfile
@@ -1,61 +1,51 @@
-# Hint: Build this image with an expanded build context
-# `docker build -t rhesis-polyphemus -f apps/polyphemus/Dockerfile .`
+# Build context MUST be the repository root (parent of apps/), not apps/polyphemus.
+#
+# From repository root:
+#   docker build -t polyphemus:latest -f apps/polyphemus/Dockerfile .
 #
 # IMPORTANT: This Dockerfile uses a two-stage build to minimize image size
 # and optimize layer caching. The builder stage installs dependencies,
 # while the runtime stage creates a minimal image.
 #
-# Models are loaded at runtime from local disk or GCS bucket (via MODEL_PATH env var)
-# This avoids OOM issues during builds with large models and reduces image size.
-#
-# For critical deployments, use --no-cache to force a complete rebuild:
-# `docker build --no-cache -t rhesis-polyphemus -f apps/polyphemus/Dockerfile .`
+# Polyphemus is now an API-only service that proxies requests to Vertex AI.
+# No local models are loaded - all inference happens on Vertex AI endpoints.
 
 # ============================================================================
 # STAGE 1: Builder - Install dependencies
 # ============================================================================
-FROM nvidia/cuda:12.1.1-cudnn8-runtime-ubuntu22.04 AS builder
+FROM python:3.11-slim AS builder
+
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
 WORKDIR /app
 
-# Install Python 3.10 and build dependencies with retry logic
+# Install build dependencies including Rust (needed for base2048/maturin)
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-    --allow-unauthenticated \
-    -o Acquire::Retries=3 \
-    -o Acquire::http::Timeout=10 \
-    -o Acquire::https::Timeout=10 \
-    python3.10 \
-    python3.10-venv \
-    python3.10-dev \
-    python3-pip \
     build-essential \
     git \
     curl \
-    && ln -s /usr/bin/python3.10 /usr/bin/python \
+    && curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y \
     && rm -rf /var/lib/apt/lists/*
+
+# Add Rust to PATH
+ENV PATH="/root/.cargo/bin:${PATH}"
 
 # Copy only the dependency files for polyphemus
 COPY apps/polyphemus/pyproject.toml apps/polyphemus/uv.lock ./
 
 # Copy ONLY the minimal Python package structure needed for dependency resolution
-# We only need __init__.py files for the package to be recognized
 RUN mkdir -p /app/src/rhesis/polyphemus
-# Create namespace package __init__.py (polyphemus uses namespace packages like backend/SDK/Penelope)
 COPY apps/polyphemus/src/rhesis/__init__.py /app/src/rhesis/__init__.py
 COPY apps/polyphemus/src/rhesis/polyphemus/__init__.py /app/src/rhesis/polyphemus/__init__.py
 
 # Compile bytecode to improve performance
 ENV UV_COMPILE_BYTECODE=1
-# Use only system Python provided by the base image
 ENV UV_NO_MANAGED_PYTHON=1
-# Skip the installation of the dev dependencies
 ENV UV_NO_DEV=1
-# Use copy mode for better cache mount compatibility
 ENV UV_LINK_MODE=copy
 
-# Copy the SDK, Penelope, and backend directories
+# Copy the SDK, Penelope, and backend directories (needed for auth and rate limiting)
 COPY sdk /app/sdk/
 COPY penelope /app/penelope/
 COPY apps/backend /app/apps/backend/
@@ -66,35 +56,23 @@ RUN sed -i 's|path = "../../sdk"|path = "/app/sdk"|g' /app/pyproject.toml && \
     sed -i 's|path = "../backend"|path = "/app/apps/backend"|g' /app/pyproject.toml
 
 # Install dependencies using uv sync
-# Use cache mount for faster builds and install only production dependencies
-# Note: SDK, Penelope, and Backend are installed in editable mode from local paths
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync --no-dev
 
 # Now copy ALL source code - this layer will invalidate when any source changes
 COPY apps/polyphemus/src /app/src
 
-# Create models directory for runtime model loading from local/GCS paths
-RUN mkdir -p /app/models
-
 # ============================================================================
 # STAGE 2: Runtime - Create minimal runtime image
 # ============================================================================
-FROM nvidia/cuda:12.1.1-cudnn8-runtime-ubuntu22.04 AS runtime
+FROM python:3.11-slim AS runtime
 
 WORKDIR /app
 
-# Install Python 3.10 and runtime dependencies
+# Install runtime dependencies
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-    --allow-unauthenticated \
-    -o Acquire::Retries=3 \
-    -o Acquire::http::Timeout=10 \
-    -o Acquire::https::Timeout=10 \
-    python3.10 \
-    python3.10-venv \
     curl \
-    && ln -s /usr/bin/python3.10 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/*
 
 # Create non-root user first
@@ -103,8 +81,6 @@ RUN adduser --disabled-password --gecos '' appuser && \
     chown appuser:appuser /app
 
 # Copy the virtual environment from builder
-# Note: This is a large copy operation (several GB with ML dependencies)
-# GitHub Actions may appear to hang here, but it's working
 COPY --from=builder --chown=appuser:appuser /app/.venv /app/.venv
 
 # Copy source code and dependencies with proper ownership
@@ -112,9 +88,6 @@ COPY --from=builder --chown=appuser:appuser /app/src /app/src
 COPY --from=builder --chown=appuser:appuser /app/sdk /app/sdk
 COPY --from=builder --chown=appuser:appuser /app/penelope /app/penelope
 COPY --from=builder --chown=appuser:appuser /app/apps/backend /app/apps/backend
-
-# Create models directory for runtime model caching
-COPY --from=builder --chown=appuser:appuser /app/models /app/models
 
 # Clean up any .env files for security
 RUN find /app -name ".env" -type f -delete
@@ -126,16 +99,16 @@ USER appuser
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PYTHONPATH=/app:/app/src \
-    PATH="/app/.venv/bin:$PATH" \
-    TRANSFORMERS_CACHE="/app/models"
+    PATH="/app/.venv/bin:$PATH"
 
 # Expose the port the app will run on
 EXPOSE 8080
 
 # Add health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
     CMD curl -f http://localhost:8080/health || exit 1
 
 # Start the FastAPI app using Gunicorn with optimized settings
 # Module path is rhesis.polyphemus.main:app (package structure is rhesis.polyphemus)
-CMD ["gunicorn", "--bind", "0.0.0.0:8080", "--workers", "1", "--timeout", "3600", "--worker-class", "uvicorn.workers.UvicornWorker", "rhesis.polyphemus.main:app", "--preload"]
+# Increased workers since we're not doing heavy computation locally
+CMD ["gunicorn", "--bind", "0.0.0.0:8080", "--workers", "4", "--timeout", "600", "--worker-class", "uvicorn.workers.UvicornWorker", "rhesis.polyphemus.main:app"]
