--- a/infrastructure/config/service-secrets-config.sh.example
+++ b/infrastructure/config/service-secrets-config.sh.example
@@ -74,6 +74,7 @@ export DEV_NEXT_PUBLIC_AUTH0_CLIENT_ID="your-auth0-client-id"
 export DEV_NEXT_PUBLIC_AUTH0_DOMAIN="dev-tenant.auth0.com"
 export DEV_DATABASE_URL="postgresql://rhesis-user:password@/rhesis?host=/cloudsql/rhesis-dev:europe-west4:db-dev"
 # Polyphemus service variables
+export DEV_DEFAULT_POLYPHEMUS_URL="https://dev-polyphemus.rhesis.ai"
 export DEV_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
 export DEV_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
 export DEV_POLYPHEMUS_MODEL_BUCKET="model-bucket-name"
@@ -151,6 +152,7 @@ export STG_NEXT_PUBLIC_AUTH0_CLIENT_ID="your-auth0-client-id"
 export STG_NEXT_PUBLIC_AUTH0_DOMAIN="stg-tenant.auth0.com"
 export STG_DATABASE_URL="postgresql://rhesis-user:password@/rhesis?host=/cloudsql/rhesis-stg:europe-west4:db-stg"
 # Polyphemus service variables
+export STG_DEFAULT_POLYPHEMUS_URL="https://stg-polyphemus.rhesis.ai"
 export STG_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
 export STG_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
 export STG_POLYPHEMUS_MODEL_BUCKET="model-bucket-name"
@@ -228,6 +230,7 @@ export PRD_NEXT_PUBLIC_AUTH0_CLIENT_ID="your-auth0-client-id"
 export PRD_NEXT_PUBLIC_AUTH0_DOMAIN="tenant.auth0.com"
 export PRD_DATABASE_URL="postgresql://rhesis-user:password@/rhesis?host=/cloudsql/rhesis-prd:europe-west4:db-prd"
 # Polyphemus service variables
+export PRD_DEFAULT_POLYPHEMUS_URL="https://polyphemus.rhesis.ai"
 export PRD_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
 export PRD_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
 export PRD_POLYPHEMUS_MODEL_BUCKET="model-bucket-name"
@@ -275,6 +278,7 @@ export TEST_REDIS_URL="redis://localhost:6379"
 export TEST_BROKER_URL="redis://localhost:6379/0"
 export TEST_CELERY_RESULT_BACKEND="redis://localhost:6379/0"
 # Polyphemus service variables
+export TEST_DEFAULT_POLYPHEMUS_URL="https://dev-polyphemus.rhesis.ai"
 export TEST_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
 export TEST_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
 
