feat(polyphemus): add access control and delegation tokens (#1393)
* feat(polyphemus): add access control and delegation tokens

Add core Polyphemus integration to the backend including:
- Service delegation tokens for Polyphemus authentication
- Access control system with request/grant workflow
- Database migrations for Polyphemus models and access control
- Polyphemus-aware model resolution in user_model_utils
- Email notification template for access requests

* feat(polyphemus): add auth and token validation

Add delegation token validation to the Polyphemus service,
enabling backend-to-Polyphemus authentication via JWT tokens
alongside the existing API key authentication.

* feat(frontend): add Polyphemus access request UI

Add frontend support for Polyphemus model access including:
- Access request modal and API route
- Model card UI states for Polyphemus access control
- Polyphemus provider icon and logo
- User settings interface with is_verified field

* ci(polyphemus): add JWT secret to deployment workflow

* test: add Polyphemus delegation and access control tests

Add test coverage for delegation token creation, Polyphemus
delegation integration, and updated organization service tests
for the refactored model creation flow.

* fix(test): update org test to expect Polyphemus model creation

* chore(backend): regenerate uv.lock

* fix(backend): restore response_model on settings endpoint

Add is_verified field to UserSettings schema and restore
response_model=UserSettings on GET /settings so Pydantic
fills in default values for ui, notifications, etc.

* fix(backend): fix token and comment test failures

- Make token_obfuscated optional in TokenRead schema to handle
  tokens with null obfuscated values
- Fix test_list_tokens to handle null token_obfuscated
- Fix test_delete_comment_clears_task_references to create a
  status instead of relying on pre-existing data

* fix(polyphemus): use FROM_EMAIL env var for access request recipient

* feat(infra): add DEF

--- a/.github/workflows/polyphemus.yml
+++ b/.github/workflows/polyphemus.yml
@@ -406,6 +406,7 @@ jobs:
           SQLALCHEMY_DB_HOST=${{ secrets.SQLALCHEMY_DB_HOST }},
           SQLALCHEMY_DB_NAME=${{ secrets.SQLALCHEMY_DB_NAME }},
           DB_ENCRYPTION_KEY=${{ secrets.DB_ENCRYPTION_KEY }},
+          JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }},
           LOG_LEVEL=${{ secrets.LOG_LEVEL }}
           EOF
           )"
@@ -444,6 +445,7 @@ jobs:
           SQLALCHEMY_DB_HOST=${{ secrets.SQLALCHEMY_DB_HOST }},
           SQLALCHEMY_DB_NAME=${{ secrets.SQLALCHEMY_DB_NAME }},
           DB_ENCRYPTION_KEY=${{ secrets.DB_ENCRYPTION_KEY }},
+          JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }},
           LOG_LEVEL=${{ secrets.LOG_LEVEL }}
           EOF
           )"
