fix(worker): add missing JWT secrets to k8s deployment
Add JWT_SECRET_KEY, JWT_ALGORITHM, and JWT_ACCESS_TOKEN_EXPIRE_MINUTES
to worker k8s secret creation and deployment manifest, matching the
backend and polyphemus configurations.

--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -275,6 +275,9 @@ jobs:
             --from-literal=SQLALCHEMY_DB_HOST="${{ secrets.SQLALCHEMY_DB_HOST || '127.0.0.1' }}" \
             --from-literal=SQLALCHEMY_DB_NAME="${{ secrets.SQLALCHEMY_DB_NAME }}" \
             --from-literal=DB_ENCRYPTION_KEY="${{ secrets.DB_ENCRYPTION_KEY }}" \
+            --from-literal=JWT_SECRET_KEY="${{ secrets.JWT_SECRET_KEY }}" \
+            --from-literal=JWT_ALGORITHM="${{ secrets.JWT_ALGORITHM }}" \
+            --from-literal=JWT_ACCESS_TOKEN_EXPIRE_MINUTES="${{ secrets.JWT_ACCESS_TOKEN_EXPIRE_MINUTES }}" \
             --from-literal=LOG_LEVEL="${{ secrets.LOG_LEVEL }}" \
             --from-literal=CELERY_WORKER_LOGLEVEL="${{ secrets.LOG_LEVEL || 'INFO' }}" \
             --from-literal=CELERY_WORKER_CONCURRENCY="${{ secrets.CELERY_WORKER_CONCURRENCY || '2' }}" \
