fix(worker): add missing env vars to k8s deployment
Add DEFAULT_POLYPHEMUS_URL and RHESIS_CONNECTOR_DISABLED to the worker
deployment manifest. Both are already created in the k8s secret but
were not mounted into the container.

--- a/apps/worker/k8s/deployment.yaml
+++ b/apps/worker/k8s/deployment.yaml
@@ -223,6 +223,16 @@ spec:
             secretKeyRef:
               name: rhesis-worker-secrets
               key: LOCAL_STORAGE_PATH
+        - name: RHESIS_CONNECTOR_DISABLED
+          valueFrom:
+            secretKeyRef:
+              name: rhesis-worker-secrets
+              key: RHESIS_CONNECTOR_DISABLED
+        - name: DEFAULT_POLYPHEMUS_URL
+          valueFrom:
+            secretKeyRef:
+              name: rhesis-worker-secrets
+              key: DEFAULT_POLYPHEMUS_URL
         ports:
         - containerPort: 8080
           name: health
