--- a/.env.example
+++ b/.env.example
@@ -64,8 +64,8 @@ DB_ENCRYPTION_KEY=BASE64_ENCODED_DB_ENCRYPTION_KEY
 # Choose one or more AI providers based on your needs
 
 # Default models (format: provider/model_name)
-DEFAULT_GENERATION_MODEL=vertex_ai/gemini-2.0-flash
-DEFAULT_EVALUATION_MODEL=vertex_ai/gemini-2.0-flash
+DEFAULT_GENERATION_MODEL=rhesis/rhesis-default
+DEFAULT_EVALUATION_MODEL=rhesis/rhesis-default
 DEFAULT_EMBEDDING_MODEL=vertex_ai/text-embedding-005
 
 # Azure OpenAI (if using Azure)
