Feat/Wireguard Vpn Tmp (#1353)
* kubernetes private cluster

* fix: All cluster resources were brought up, but: only 0 nodes out of 3 have registered.

* fix: include tfplan into the gitignore.

* implemented wireguard and test script

* peering example

* implemen-state-management-using-gcs-bucket

* fix: timeout issues

* fix: WireGuard tunnel CIDR overlaps the VM’s VPC subnet

* fix:destination_ranges on an ingress firewall rule

* fix:M4: No validation blocks on CIDR variables

* fix: M1: CIDR values hardcoded in 5+ locations

* fix: terraform_state_bucket variable declared but never used

* added vm for routhe the managed gke

* update the prd deletion protection

* fix: manual fix work in this stage

* autometic key managment & added routing to reach gke private route

* fix: remove ssh and add GCP IAP

* fix: update version, minor bug

* fix: update wireguard vm new peer information

* fix: change priority and distingused tunner name and server name

* fix: Non-idempotent key generation

--- a/.gitignore
+++ b/.gitignore
@@ -286,6 +286,7 @@ infrastructure/environments/prd/.terraform.lock.hcl
 *.tfstate.*
 *.tfvars
 *.tfvars.json
+backend.conf
 crash.log
 crash.*.log
 override.tf
@@ -295,6 +296,8 @@ override.tf.json
 .terraformrc
 terraform.rc
 terraform-*-plan*
+tfplan
+*.tfplan
 
 # DeepEval
 .deepeval/
