--- a/.env.example
+++ b/.env.example
@@ -93,6 +93,10 @@ SMTP_USER=your-smtp-username
 SMTP_PASSWORD=your-smtp-password
 FROM_EMAIL=noreply@yourdomain.com
 
+# SendGrid Dynamic Template IDs (optional)
+SENDGRID_DAY_1_EMAIL_TEMPLATE_ID=your-sendgrid-template-id
+SENDGRID_DAY_2_EMAIL_TEMPLATE_ID=your-sendgrid-template-id
+
 
 # =============================================================================
 # 🔗 EXTERNAL SERVICES
