feat(backend): add Day 3 scheduled email (71h 59min after onboarding)

--- a/.env.example
+++ b/.env.example
@@ -96,6 +96,7 @@ FROM_EMAIL=noreply@yourdomain.com
 # SendGrid Dynamic Template IDs (optional)
 SENDGRID_DAY_1_EMAIL_TEMPLATE_ID=your-sendgrid-template-id
 SENDGRID_DAY_2_EMAIL_TEMPLATE_ID=your-sendgrid-template-id
+SENDGRID_DAY_3_EMAIL_TEMPLATE_ID=your-sendgrid-template-id
 
 
 # =============================================================================
