fix(backend): use SendGrid v3 API for dynamic templates with scheduling
Fixes all issues identified by Bugbot:
- Use SendGrid v3 API instead of SMTP for Dynamic Templates
- Fix naive UTC datetime to use timezone-aware datetime.now(timezone.utc)
- Refactor duplicated code into single _send_scheduled_onboarding_email method
- Replace print() with proper logger.exception() and logger.warning()
- Add SENDGRID_API_KEY environment variable
- Add sendgrid dependency to pyproject.toml

Dynamic Templates require the v3 API and cannot be sent via SMTP.

--- a/.env.example
+++ b/.env.example
@@ -93,6 +93,9 @@ SMTP_USER=your-smtp-username
 SMTP_PASSWORD=your-smtp-password
 FROM_EMAIL=noreply@yourdomain.com
 
+# SendGrid API Key (for Dynamic Templates and scheduling)
+SENDGRID_API_KEY=your-sendgrid-api-key
+
 # SendGrid Dynamic Template IDs (optional)
 SENDGRID_DAY_1_EMAIL_TEMPLATE_ID=your-sendgrid-template-id
 SENDGRID_DAY_2_EMAIL_TEMPLATE_ID=your-sendgrid-template-id
