--- a/apps/backend/pyproject.toml
+++ b/apps/backend/pyproject.toml
@@ -61,6 +61,7 @@ dependencies = [
     "garak>=0.9.0",
     "mcp-atlassian>=0.13.0",
     "fastxlsx>=0.2.0",
+    "sendgrid>=6.12.5",
 ]
 
 [project.optional-dependencies]
