refactor: replace POLYPHEMUS_REGION with REGION env var
Align polyphemus workflows with the rest of the codebase by using the
shared REGION secret instead of a polyphemus-specific one.

--- a/.github/workflows/polyphemus.yml
+++ b/.github/workflows/polyphemus.yml
@@ -122,7 +122,7 @@ jobs:
         id: set_env
         run: |
           echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> $GITHUB_ENV
-          echo "POLYPHEMUS_REGION=${{ secrets.POLYPHEMUS_REGION || secrets.TF_VAR_POLYPHEMUS_REGION || 'us-central1' }}" >> $GITHUB_ENV
+          echo "REGION=${{ secrets.REGION || secrets.TF_VAR_REGION || 'us-central1' }}" >> $GITHUB_ENV
 
           # Get commit SHA (short version for URLs)
           COMMIT_SHA=$(echo "${{ github.sha }}" | cut -c1-8)
@@ -252,8 +252,8 @@ jobs:
       - name: Set environment variables
         run: |
           echo "PROJECT_ID=${{ secrets.PROJECT_ID }}" >> $GITHUB_ENV
-          POLYPHEMUS_REGION="${{ secrets.POLYPHEMUS_REGION || secrets.TF_VAR_POLYPHEMUS_REGION || 'us-central1' }}"
-          echo "POLYPHEMUS_REGION=$POLYPHEMUS_REGION" >> $GITHUB_ENV
+          REGION="${{ secrets.REGION || secrets.TF_VAR_REGION || 'us-central1' }}"
+          echo "REGION=$REGION" >> $GITHUB_ENV
           
           # Get commit SHA (short version) - use build output if available, otherwise compute from github.sha
           if [ -n "${{ needs.build.outputs.commit_sha }}" ]; then
@@ -349,7 +349,7 @@ jobs:
           
           # Query Polyphemus for endpoint ID
           ENDPOINT_ID=$(gcloud ai endpoints list \
-            --region=${{ env.POLYPHEMUS_REGION }} \
+            --region=${{ env.REGION }} \
             --project=${{ env.PROJECT_ID }} \
             --filter="displayName=\"${ENDPOINT_NAME}\"" \
             --format="value(name)" \
@@ -375,12 +375,12 @@ jobs:
             echo "🚀 Deploying preview revision with commit SHA: $IMAGE_TAG"
             echo "Image: ${{ env.IMAGE_NAME }}:$IMAGE_TAG"
 
-            echo "Using Cloud SQL instance: ${{ env.PROJECT_ID }}:${{ env.POLYPHEMUS_REGION }}:${{ env.CLOUDSQL_INSTANCE }}"
+            echo "Using Cloud SQL instance: ${{ env.PROJECT_ID }}:${{ env.REGION }}:${{ env.CLOUDSQL_INSTANCE }}"
 
             gcloud run deploy ${{ env.SERVICE_NAME }} \
               --image=${{ env.IMAGE_NAME }}:$IMAGE_TAG \
               --project=${{ env.PROJECT_ID }} \
-              --region=${{ env.POLYPHEMUS_REGION }} \
+              --region=${{ env.REGION }} \
               --platform=managed \
               --allow-unauthenticated \
               --memory=2Gi \
@@ -392,11 +392,11 @@ jobs:
               --concurrency=80 \
               --no-traffic \
               --revision-suffix=${{ env.COMMIT_SHA }} \
-              --add-cloudsql-instances=${{ env.PROJECT_ID }}:${{ env.POLYPHEMUS_REGION }}:${{ env.CLOUDSQL_INSTANCE }} \
+              --add-cloudsql-instances=${{ env.PROJECT_ID }}:${{ env.REGION }}:${{ env.CLOUDSQL_INSTANCE }} \
               --set-env-vars="$(cat <<EOF
           POLYPHEMUS_ENDPOINT_ID=${{ env.POLYPHEMUS_ENDPOINT_ID }},
           POLYPHEMUS_PROJECT_ID=${{ env.PROJECT_ID }},
-          POLYPHEMUS_LOCATION=${{ env.POLYPHEMUS_REGION }},
+          POLYPHEMUS_LOCATION=${{ env.REGION }},
           POLYPHEMUS_DEFAULT_MODEL=${{ secrets.POLYPHEMUS_DEFAULT_MODEL }},
           SQLALCHEMY_DATABASE_URL=${{ secrets.SQLALCHEMY_DATABASE_URL }},
           SQLALCHEMY_DB_MODE=${{ secrets.SQLALCHEMY_DB_MODE }},
@@ -416,12 +416,12 @@ jobs:
             # Regular deployment with latest tag
             echo "🚀 Deploying regular revision"
             echo "Image: ${{ env.IMAGE_NAME }}:latest"
-            echo "Using Cloud SQL instance: ${{ env.PROJECT_ID }}:${{ env.POLYPHEMUS_REGION }}:${{ env.CLOUDSQL_INSTANCE }}"
+            echo "Using Cloud SQL instance: ${{ env.PROJECT_ID }}:${{ env.REGION }}:${{ env.CLOUDSQL_INSTANCE }}"
 
             gcloud run deploy ${{ env.SERVICE_NAME }} \
               --image=${{ env.IMAGE_NAME }}:latest \
               --project=${{ env.PROJECT_ID }} \
-              --region=${{ env.POLYPHEMUS_REGION }} \
+              --region=${{ env.REGION }} \
               --platform=managed \
               --allow-unauthenticated \
               --memory=2Gi \
@@ -431,11 +431,11 @@ jobs:
               --max-instances=10 \
               --port=8080 \
               --concurrency=80 \
-              --add-cloudsql-instances=${{ env.PROJECT_ID }}:${{ env.POLYPHEMUS_REGION }}:${{ env.CLOUDSQL_INSTANCE }} \
+              --add-cloudsql-instances=${{ env.PROJECT_ID }}:${{ env.REGION }}:${{ env.CLOUDSQL_INSTANCE }} \
               --set-env-vars="$(cat <<EOF
           POLYPHEMUS_ENDPOINT_ID=${{ env.POLYPHEMUS_ENDPOINT_ID }},
           POLYPHEMUS_PROJECT_ID=${{ env.PROJECT_ID }},
-          POLYPHEMUS_LOCATION=${{ env.POLYPHEMUS_REGION }},
+          POLYPHEMUS_LOCATION=${{ env.REGION }},
           POLYPHEMUS_DEFAULT_MODEL=${{ secrets.POLYPHEMUS_DEFAULT_MODEL }},
           SQLALCHEMY_DATABASE_URL=${{ secrets.SQLALCHEMY_DATABASE_URL }},
           SQLALCHEMY_DB_MODE=${{ secrets.SQLALCHEMY_DB_MODE }},
@@ -457,7 +457,7 @@ jobs:
             gcloud run services update-traffic ${{ env.SERVICE_NAME }} \
               --to-latest \
               --project=${{ env.PROJECT_ID }} \
-              --region=${{ env.POLYPHEMUS_REGION }}
+              --region=${{ env.REGION }}
 
             echo "✅ Traffic successfully routed to new revision"
           fi
@@ -471,7 +471,7 @@ jobs:
           echo "🔍 Getting latest revision for service: ${{ env.SERVICE_NAME }}"
           LATEST_REVISION=$(gcloud run revisions list \
             --service=${{ env.SERVICE_NAME }} \
-            --region=${{ env.POLYPHEMUS_REGION }} \
+            --region=${{ env.REGION }} \
             --project=${{ env.PROJECT_ID }} \
             --format="value(metadata.name)" \
             --limit=1)
@@ -482,7 +482,7 @@ jobs:
           if [ -z "$LATEST_REVISION" ]; then
             echo "❌ Error: No latest revision found!"
             echo "🔍 Available revisions:"
-            gcloud run revisions list --service=${{ env.SERVICE_NAME }} --region=${{ env.POLYPHEMUS_REGION }} --project=${{ env.PROJECT_ID }} --limit=5
+            gcloud run revisions list --service=${{ env.SERVICE_NAME }} --region=${{ env.REGION }} --project=${{ env.PROJECT_ID }} --limit=5
             exit 1
           fi
 
@@ -499,13 +499,13 @@ jobs:
             --to-revisions="$LATEST_REVISION=0" \
             --set-tags "$TAG_NAME=$LATEST_REVISION" \
             --project=${{ env.PROJECT_ID }} \
-            --region=${{ env.POLYPHEMUS_REGION }}
+            --region=${{ env.REGION }}
 
           # Get the actual commit-specific URL from Cloud Run
           echo "Fetching tagged URL from Cloud Run..."
           PREVIEW_URL=$(gcloud run services describe ${{ env.SERVICE_NAME }} \
             --project=${{ env.PROJECT_ID }} \
-            --region=${{ env.POLYPHEMUS_REGION }} \
+            --region=${{ env.REGION }} \
             --format="json" | jq -r --arg tag "$TAG_NAME" '.status.traffic[] | select(.tag == $tag) | .url' 2>/dev/null || echo "")
 
           if [ -z "$PREVIEW_URL" ] || [ "$PREVIEW_URL" = "null" ]; then
@@ -513,7 +513,7 @@ jobs:
             sleep 5
             PREVIEW_URL=$(gcloud run services describe ${{ env.SERVICE_NAME }} \
               --project=${{ env.PROJECT_ID }} \
-              --region=${{ env.POLYPHEMUS_REGION }} \
+              --region=${{ env.REGION }} \
               --format="json" | jq -r --arg tag "$TAG_NAME" '.status.traffic[] | select(.tag == $tag) | .url')
           fi
 
@@ -537,7 +537,7 @@ jobs:
             # For regular deployments, get the standard service URL from Cloud Run
             DEPLOYED_URL=$(gcloud run services describe ${{ env.SERVICE_NAME }} \
               --project=${{ env.PROJECT_ID }} \
-              --region=${{ env.POLYPHEMUS_REGION }} \
+              --region=${{ env.REGION }} \
               --format="value(status.url)")
             echo "📍 Using standard service URL: $DEPLOYED_URL"
           fi
