--- a/infrastructure/config/service-secrets-config.sh.example
+++ b/infrastructure/config/service-secrets-config.sh.example
@@ -75,10 +75,14 @@ export DEV_NEXT_PUBLIC_AUTH0_DOMAIN="dev-tenant.auth0.com"
 export DEV_DATABASE_URL="postgresql://rhesis-user:password@/rhesis?host=/cloudsql/rhesis-dev:europe-west4:db-dev"
 # Polyphemus service variables
 export DEV_DEFAULT_POLYPHEMUS_URL="https://dev-polyphemus.rhesis.ai"
-export DEV_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
 export DEV_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
 export DEV_POLYPHEMUS_MODEL_BUCKET="model-bucket-name"
-export DEV_POLYPHEMUS_MODEL_PATH="gs://model-bucket-name/models"
+export DEV_POLYPHEMUS_MODEL_PATH="gs://model-bucket-name/cache"
+export DEV_GCP_SERVICE_ACCOUNT="service-account-name"
+# sendgrid email
+export DEV_SENDGRID_DAY_1_EMAIL_TEMPLATE_ID="sendgrid-day-1-email-template-id"
+export DEV_SENDGRID_DAY_2_EMAIL_TEMPLATE_ID="sendgrid-day-2-email-template-id"
+export DEV_SENDGRID_DAY_3_EMAIL_TEMPLATE_ID="sendgrid-day-3-email-template-id"
 
 # Staging environment variables
 # These will be set in the 'stg' GitHub environment
@@ -153,11 +157,14 @@ export STG_NEXT_PUBLIC_AUTH0_DOMAIN="stg-tenant.auth0.com"
 export STG_DATABASE_URL="postgresql://rhesis-user:password@/rhesis?host=/cloudsql/rhesis-stg:europe-west4:db-stg"
 # Polyphemus service variables
 export STG_DEFAULT_POLYPHEMUS_URL="https://stg-polyphemus.rhesis.ai"
-export STG_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
 export STG_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
 export STG_POLYPHEMUS_MODEL_BUCKET="model-bucket-name"
-export STG_POLYPHEMUS_MODEL_PATH="gs://model-bucket-name/models"
-
+export STG_POLYPHEMUS_MODEL_PATH="gs://model-bucket-name/cache"
+export STG_GCP_SERVICE_ACCOUNT="service-account-name"
+# sendgrid email
+export STG_SENDGRID_DAY_1_EMAIL_TEMPLATE_ID="sendgrid-day-1-email-template-id"
+export STG_SENDGRID_DAY_2_EMAIL_TEMPLATE_ID="sendgrid-day-2-email-template-id"
+export STG_SENDGRID_DAY_3_EMAIL_TEMPLATE_ID="sendgrid-day-3-email-template-id"
 # Production environment variables
 # These will be set in the 'prd' GitHub environment
 # Backend variables
@@ -231,11 +238,14 @@ export PRD_NEXT_PUBLIC_AUTH0_DOMAIN="tenant.auth0.com"
 export PRD_DATABASE_URL="postgresql://rhesis-user:password@/rhesis?host=/cloudsql/rhesis-prd:europe-west4:db-prd"
 # Polyphemus service variables
 export PRD_DEFAULT_POLYPHEMUS_URL="https://polyphemus.rhesis.ai"
-export PRD_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
 export PRD_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
 export PRD_POLYPHEMUS_MODEL_BUCKET="model-bucket-name"
-export PRD_POLYPHEMUS_MODEL_PATH="gs://model-bucket-name/models"
-
+export PRD_POLYPHEMUS_MODEL_PATH="gs://model-bucket-name/cache"
+export PRD_GCP_SERVICE_ACCOUNT="service-account-name"
+# sendgrid email
+export PRD_SENDGRID_DAY_1_EMAIL_TEMPLATE_ID="sendgrid-day-1-email-template-id"
+export PRD_SENDGRID_DAY_2_EMAIL_TEMPLATE_ID="sendgrid-day-2-email-template-id"
+export PRD_SENDGRID_DAY_3_EMAIL_TEMPLATE_ID="sendgrid-day-3-email-template-id"
 # Test environment variables (for GitHub Actions testing)
 # These will be set as environment-specific secrets in the 'test' environment
 export TEST_SQLALCHEMY_DB_MODE="test"
@@ -279,9 +289,11 @@ export TEST_BROKER_URL="redis://localhost:6379/0"
 export TEST_CELERY_RESULT_BACKEND="redis://localhost:6379/0"
 # Polyphemus service variables
 export TEST_DEFAULT_POLYPHEMUS_URL="https://dev-polyphemus.rhesis.ai"
-export TEST_POLYPHEMUS_REGION="gcp-region"  # GCP region for Polyphemus Cloud Run deployment
 export TEST_POLYPHEMUS_DEFAULT_MODEL="default-model"  # Default model for Polyphemus
-
+# sendgrid email
+export TEST_SENDGRID_DAY_1_EMAIL_TEMPLATE_ID="sendgrid-day-1-email-template-id"
+export TEST_SENDGRID_DAY_2_EMAIL_TEMPLATE_ID="sendgrid-day-2-email-template-id"
+export TEST_SENDGRID_DAY_3_EMAIL_TEMPLATE_ID="sendgrid-day-3-email-template-id"
 # Get the GitHub repository from the current directory or specify it manually
 REPO=$(gh repo view --json nameWithOwner -q .nameWithOwner 2>/dev/null || echo "")
 
